[package]
name = "r2e-events-rabbitmq"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["events", "pubsub", "rabbitmq", "amqp"]
categories = ["asynchronous"]
description = "RabbitMQ (AMQP 0-9-1) event bus backend for R2E — durable message queuing"

[features]
default = []
integration = []

[dependencies]
r2e-events = {workspace = true}
lapin = {workspace = true}
tokio = {workspace = true, features = ["macros", "rt", "sync", "time"]}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
futures-util = {workspace = true}
tokio-util = {workspace = true}
tokio-executor-trait = {workspace = true}
tokio-reactor-trait = {workspace = true}

[dev-dependencies]
tokio = {workspace = true, features = ["full"]}
