[package]
name = "r2e-events"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["events", "pubsub", "async"]
categories = ["asynchronous"]
description = "In-process typed event bus for R2E - publish/subscribe with async handlers"

[dependencies]
tokio = {workspace = true, features = ["rt", "sync", "time"]}
tokio-util = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}

[dev-dependencies]
r2e-core = {workspace = true}
tokio = {workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time"]}
serde_json = {workspace = true}
